building guacd at head as that is using debian based images adding travis workflow for future updates

--- a/README
+++ b/README
@@ -1,4 +1,8 @@
 
+## Taisun Info
+
+This is a fork of the GuacD server setup to build and push multi arch images for use with taisun. 
+
 ------------------------------------------------------------
  About this README
 ------------------------------------------------------------
